# dbd-1v1-timer-linux

./: .SRCINFO  .gitignore  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  dbd-timer.conf  dbd-timer.desktop  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
protocols/: wlr-layer-shell-unstable-v1.xml
src/: config.c  config.h  input.c  input.h  main.c  render.c  render.h  timer.c  timer.h  wayland.c  wayland.h
